--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Random Quote Machine</title>
+  <title>React Random Quote Machine</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
